objects/ortoo_qra__Global_Settings__c.object
<CustomObject>
    <description>It has general settings all over the Q-assign.</description>
    <fields>
        <fullName>ortoo_qra__AGMM_x_Current_Job_Id__c</fullName>
        <description>to store the id of AGMM job enqueued by Manager</description>
        <inlineHelpText>to store the id of AGMM job enqueued by Manager</inlineHelpText>
        <label>AGMM Job Id Enqueued by Manager</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Default_User_OOO_x_Calendar_Items_Type__c</fullName>
        <description>Which Calendar Entries are OOO / Unavailable?</description>
        <inlineHelpText>Which Calendar Entries are OOO / Unavailable?</inlineHelpText>
        <label>Which Calendar Entries OOO?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Calendar items</fullName>
                </value>
                <value>
                    <fullName>Time OUTSIDE all calendar items</fullName>
                </value>
                <value>
                    <fullName>Just specific types of calendar Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Default_User_OOO_x_Source__c</fullName>
        <description>Default OOO / non-working times setting for Users</description>
        <inlineHelpText>Default OOO / non-working times setting for Users</inlineHelpText>
        <label>Default OOO Times Setting For Users</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Use My Calendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__General_Notifications_Email_Address__c</fullName>
        <label>General Notifications Email Address</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Global_Scheduler_Master_Switch__c</fullName>
        <defaultValue>(&quot;Off&quot;)</defaultValue>
        <label>Global Scheduler Master Switch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Manager_Job_Business_Hours_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>In order to automate the manager job based on time.</description>
        <inlineHelpText>Manager Job to run in defined Business Hours only.</inlineHelpText>
        <label>Manager Job Business Hours Schedule</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>QA_Global_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Notify_Ortoo_Support_of_errors__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If it is checked, notification emails go to Ortoo support too.</inlineHelpText>
        <label>Notify Ortoo Support of errors</label>
        <type>Checkbox</type>
    </fields>
    <label>QA Global Settings</label>
    <nameField>
        <label>QA Global Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Global Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>